--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "marker"
-version = "0.4.0-dev"
+version = "0.5.0"
 authors = ["Alex Crawford <alex.crawford@coreos.com>"]
 description = "Tool for finding issues in CommonMark documents"
 repository = "https://github.com/crawford/marker"
