cargo: bump to v0.7.0-dev

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "marker"
-version = "0.7.0"
+version = "0.7.0-dev"
 authors = ["Alex Crawford <alex.crawford@coreos.com>"]
 description = "Tool for finding issues in CommonMark documents"
 repository = "https://github.com/crawford/marker"
