--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ license = "Apache-2.0"
 edition = "2018"
 
 [dependencies]
-clap = "^2.25"
 hyper = "^0.10"
 hyper-rustls = "^0.6"
 pulldown-cmark = "^0.1"
 rayon = "^1.0"
+structopt = "0.3.3"
 url = "^1.5"
 walkdir = "^2.0"
