--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/crawford/marker"
 readme = "README.md"
 keywords = ["commonmark", "markdown", "links", "validate"]
 license = "Apache-2.0"
+edition = "2018"
 
 [dependencies]
 clap = "^2.25"
