--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 keywords = ["commonmark", "markdown", "links", "validate"]
 license = "Apache-2.0"
 edition = "2018"
+rust-version = "1.70.0"
 
 [dependencies]
 hyper = "^0.10"
