--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ rust-version = "1.70.0"
 [dependencies]
 hyper = "^0.10"
 hyper-rustls = "^0.6"
+clap = { version = "4.4.6", features = ["cargo", "derive"] }
 pulldown-cmark = "0.6.0"
 rayon = "^1.0"
-structopt = "0.3.3"
 url = "^1.5"
 walkdir = "^2.0"
