--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,9 @@ edition = "2018"
 rust-version = "1.70.0"
 
 [dependencies]
-hyper = "^0.10"
-hyper-rustls = "^0.6"
 clap = { version = "4.4.6", features = ["cargo", "derive"] }
 pulldown-cmark = "0.6.0"
 rayon = "^1.0"
-url = "^1.5"
+reqwest = { version = "0.11.22", features = ["blocking"] }
+url = "2.4.1"
 walkdir = "^2.0"
