test: check with and without default features
Now that features are being used, every combination needs to be
tested.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,4 +18,6 @@ jobs:
         run: cargo fmt --check
 
       - name: Clippy check
-        run: cargo clippy --no-deps -- --deny=warnings
+        run: |
+          cargo clippy --no-deps -- --deny=warnings
+          cargo clippy --no-deps --no-default-features -- --deny=warnings
