--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,11 @@ rust-version = "1.70.0"
 [dependencies]
 clap = { version = "4.4.6", features = ["cargo", "derive"] }
 pulldown-cmark = "0.6.0"
-rayon = "^1.0"
+rayon = { version = "^1.0", optional = true }
 reqwest = { version = "0.11.22", features = ["blocking"], optional = true }
 url = "2.4.1"
 walkdir = "^2.0"
 
 [features]
 default = [ "network" ]
-network = [ "dep:reqwest" ]
+network = [ "dep:rayon", "dep:reqwest" ]
